--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rimraf ./build && tsc --project tsconfig.json && tscpaths -p tsconfig.json -s ./src -o ./build",
+    "start": "npm run build && node build/index.js",
     "debug": "source src/config/token && ts-node-dev -r tsconfig-paths/register src/index.ts"
   },
   "repository": {
@@ -29,10 +31,12 @@
     "discord.js": "^12.5.1",
     "linkifyjs": "^2.1.9",
     "node-fetch": "^2.6.1",
-    "tiktok-scraper": "^1.4.12"
+    "tiktok-scraper": "^1.4.12",
+    "tscpaths": "0.0.9"
   },
   "devDependencies": {
     "@types/node-fetch": "^2.5.7",
+    "rimraf": "^3.0.2",
     "ts-node-dev": "^1.1.1",
     "tsconfig-paths": "^3.9.0",
     "tslib": "^2.1.0",
