--- a/package.json
+++ b/package.json
@@ -32,14 +32,14 @@
     "linkifyjs": "^2.1.9",
     "node-fetch": "^2.6.1",
     "tiktok-scraper": "^1.4.12",
-    "tscpaths": "0.0.9"
+    "tscpaths": "0.0.9",
+    "tslib": "^2.1.0"
   },
   "devDependencies": {
     "@types/node-fetch": "^2.5.7",
     "rimraf": "^3.0.2",
     "ts-node-dev": "^1.1.1",
     "tsconfig-paths": "^3.9.0",
-    "tslib": "^2.1.0",
     "typescript": "^4.1.3"
   }
 }
