--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
       "types/*": ["types/*"]
     },
     "module": "commonjs",
-    "target": "es2017",
+    "target": "ES2017",
     "noImplicitAny": false,
     "sourceMap": true,
     "outDir": "build",
@@ -14,14 +14,10 @@
     "experimentalDecorators": true,
     "importHelpers": true,
     "forceConsistentCasingInFileNames": true,
-    "lib": [
-      "es2020",
-      "es2017",
-      "esnext.asynciterable"
-    ],
+    "lib": ["es2020", "es2017", "esnext.asynciterable"],
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "typeRoots": [ "./src/types/public", "./node_modules/@types"]
+    "typeRoots": ["./src/types/public", "./node_modules/@types"]
   },
   "exclude": ["node_modules", "src/types/public"]
 }
