--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://lynnau@github.com/lynnau/discord-tiktok.git"
+    "url": "git+https://x-oauth-basic@github.com/lynnau/discord-tiktok.git"
   },
   "keywords": [
     "tiktok",
