change package url structure

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "jsdom": "^19.0.0",
     "linkifyjs": "^2.1.9",
     "node-fetch": "^2.6.6",
-    "super-simple-tiktok-scraper": "git+https://github.com/JacksDevPlayground/super-simple-tiktok-scraper.git#v0.1",
+    "super-simple-tiktok-scraper": "github:JacksDevPlayground/super-simple-tiktok-scraper.git#v0.1",
     "tscpaths": "0.0.9",
     "tslib": "^2.3.1"
   },
