move package to npm repo

--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,2 @@
-//github.com/:__authToken=${GITHUB_AUTH}
+@jacksdevplayground:registry=https://npm.pkg.github.com
+/npm.pkg.github.com/:_authToken=${GITHUB_AUTH}
