--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 @jacksdevplayground:registry=https://npm.pkg.github.com
-/npm.pkg.github.com/:_authToken=${GITHUB_AUTH}
+/npm.pkg.github.com/:_authToken=${NPM_TOKEN}
